# gm-trainer

./: README.md  pyproject.toml
gm_trainer/: __init__.py  __main__.py  cli.py  trainer.py
